Adição KeyCloak para Validação